--- a/scss/lf.scss
+++ b/scss/lf.scss
@@ -9,6 +9,10 @@
 
 @import "components";
 
+*, *:before, *:after {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: $helvetica;
 	font-size: $base-font-size;
