--- a/scss/variables/_buttons.scss
+++ b/scss/variables/_buttons.scss
@@ -1,3 +1,6 @@
+$lf-btn-heigth: $base-measure * 10 !default;
+$lf-btn-line-heigth: $base-measure * 5 !default;
+$lf-btn-border: $base-border !default;
 $lf-btn-padding: $base-measure * 2 $base-measure * 3.5 !default;
 $lf-btn-border: $base-border !default;
 $lf-btn-border-radius: $base-border-radius !default;
